# survive-os

./: .gitignore  CLAUDE.md  README.md
.github/: CODEOWNERS
agriculture/crop-planner/: Dockerfile  README.md  crop-planner.yml  survive-crop-planner.service
agriculture/livestock/: Dockerfile  README.md  livestock.yml  survive-livestock.service
agriculture/seed-bank/: Dockerfile  README.md  seed-bank.yml  survive-seed-bank.service
agriculture/sensors/: Dockerfile  README.md  sensors.yml  survive-sensors.service
comms/alerts/: Dockerfile  README.md  alerts.yml  survive-alerts.service
comms/bbs/: Dockerfile  README.md  bbs.yml  survive-bbs.service
comms/ham-radio/: Dockerfile  README.md  ham-radio.yml  survive-ham-radio.service
comms/meshtastic-gw/: Dockerfile  README.md  meshtastic-gw.yml  requirements.txt  survive-meshtastic-gw.service
education/curriculum/: AGENT-TEAM-TASKS.md  README.md  TEACHING-GUIDE.md
frontend/: .eslintrc.json  Dockerfile  README.md  package.json  server.js  survive-shell.service
frontend/src/: app.js  (+2 more)
governance/: Dockerfile  README.md  governance.yml  survive-governance.service
identity/: Dockerfile  README.md  identity-admin.service
identity/cli/badge-provisioner/: README.md  pyproject.toml
identity/cli/badge-provisioner/badge_provisioner/: cli.py  lldap_client.py
identity/middleware/: pyproject.toml
identity/middleware/survive_rbac/: __init__.py  middleware.py  models.py
platform/: README.md
platform/scaffolding/python/: README.md  app.py  pyproject.toml
sync/: Dockerfile  README.md  requirements.txt  survive-sync.service  sync.yml
weather/: Dockerfile  README.md  requirements.txt  survive-weather.service  weather.yml
(+628 files in other folders)
